--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://tittogenovese93:VcEzMW3nHR3MVyUX@cluster0.lno1xg9.mongodb.net/task-manager?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=laMiaChiaveSegreta!@tbDvuiC4pl
+MONGO_URI=
+JWT_SECRET=
 PORT=5000
