--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Exclude node_modules per entrambi i progetti
 **/node_modules/
 
-# Escludi file di ambiente contenenti informazioni sensibili
+# File di ambiente contenenti informazioni sensibili
 **/.env
 
-# Escludi file di log
+# File di log
 *.log
 npm-debug.log*
 yarn-debug.log*
